--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,7 +197,7 @@ html{
 #slider{
     margin-top: 46px;
     padding-top: 50%;
-    background: url('/assets/img/ny.jpg') top center / cover no-repeat;
+    background: url('./assets/img/ny.jpg') top center / cover no-repeat;
     position: relative;
 }
 
